<resources>
    <string name="app_name">Rekatours</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="pick_what">Pick what you need</string>
    <string name="beranda" translatable="false">Beranda</string>
    <string name="kabar_berita" translatable="false">Kabar Berita</string>
    <string name="kritik_saran" translatable="false">Kritik dan Saran</string>
    <string name="tentang" translatable="false">Tentang Reka</string>
    <string name="app_version" translatable="false">App Version 1.0</string>
    <string name="app_description" translatable="false">
        REKATOURS tidak sekedar menyediakan anda tiket pesawat dan reservasi hotel, kami memberikan kenyamanan perjalanan dan liburan anda dengan layanan lengkap : tiket pesawat terbang/kereta api, akomodasi hotel, transportasi dan pengaturan tour anda.
Tour kami customized, unique &amp; personal, sehingga tidak ada kata bosan karena perjalanan anda kami desain sesuai dengan keinginan anda. Tinggal relax, menikmati perjalanan, selebihnya kami yang atur kebutuhan liburan anda.
\n\nUntuk permintaan layanan kami, silahkan menghubungi :
\nTelepon : +62 21 824 00280, 0813 15942222
\nWhatsapp: +62 813 15942222
\nEmail: info@rekatoursntravel.com
\nLineID: rekatours
\n\nKunjungi juga website dan media social Rekatours:
\nwww.rekatoursntravel.com
\nFB: facebook.com/rekatours
\nIG: @rekatours
\nTwitter: @rekatour
\n\nRekatours adalah brand milik CV. Rajawali Reka Cipta\n\nPowered by Tiket.com
</string>
    <string name="email_anda" translatable="false">Alamat email anda</string>
    <string name="kritik_saran_description" translatable="false">Kritik &amp; saran yang anda tulis akan dikirim langsung ke email Rekatour.</string>
    <string name="send" translatable="false">Kirim</string>
    <string name="please_wait" translatable="false">Please Wait</string>
    <string name="RTO" translatable="false">Request Timed Out</string>
    <string name="search_airport" translatable="false">Cari Bandara</string>
    <string name="sekali_jalan" translatable="false">Sekali Jalan</string>
    <string name="pulang_pergi" translatable="false">Pulang Pergi</string>
    <string name="dari" translatable="false">Dari</string>
    <string name="menuju" translatable="false">Menuju</string>
    <string name="berangkat" translatable="false">Berangkat</string>
    <string name="pulang" translatable="false">Pulang</string>
    <string name="penumpang" translatable="false">Penumpang</string>
    <string name="dewasa" translatable="false">Dewasa</string>
    <string name="anak" translatable="false">Anak 2-12 tahun</string>
    <string name="cari_pesawat" translatable="false">Cari Pesawat</string>
    <string name="pilih_penerbangan" translatable="false">Pilih Penerbangan</string>
    <string name="pergi" translatable="false">Pergi</string>
    <string name="detail_pesanan" translatable="false">Detail Pesanan</string>
    <string name="bayi" translatable="false"><![CDATA[Bayi <2 Tahun]]></string>
    <string name="pilih_kota_keberangkatan" translatable="false">Pilih Kota Keberangkatan</string>
    <string name="pilih_kota_tujuan" translatable="false">Pilih Kota Tujuan</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="informasi_penumpang" translatable="false">Informasi Penumpang</string>
    <string name="informasi_kontak" translatable="false">Informasi kontak yang dapat dihubungi</string>
    <string name="titel" translatable="false">Titel</string>
    <string name="nama_lengkap" translatable="false">Nama Lengkap</string>
    <string name="no_telp" translatable="false">No Telepon</string>
    <string name="email" translatable="false">Email</string>
    <string name="pilih_titel" translatable="false">Pilih Titel</string>
    <string name="metode_pembayaran" translatable="false">Metode Pembayaran</string>
    <string name="kartu_kredit" translatable="false">Kartu Kredit</string>
    <string name="atm_transfer" translatable="false">Atm Transfer</string>
    <string name="cimb_clicks" translatable="false">CIMB Clicks</string>
    <string name="klik_bca" translatable="false">KlikBCA</string>
    <string name="mandiri_clickpay" translatable="false">Mandiri Clickpay</string>
    <string name="epay_bri" translatable="false">ePay BRI</string>
    <string name="bca_klikpay" translatable="false">BCA Klikpay</string>
    <string name="order_id" translatable="false">Order ID</string>
    <string name="sisa_waktu" translatable="false">Sisa waktu pemesanan</string>
    <string name="tanggal_lahir" translatable="false">Tanggal Lahir</string>
    <string name="filter_berdasarkan" translatable="false">Filter Berdasarkan</string>
    <string name="pagi" translatable="false">03.01-09.00</string>
    <string name="waktu_penerbangan" translatable="false">Waktu penerbangan</string>
    <string name="siang" translatable="false">09.01-15.00</string>
    <string name="sore" translatable="false">15.01-18.00</string>
    <string name="malam" translatable="false">08.01-03.00</string>
    <string name="nonstop" translatable="false">Non-stop</string>
    <string name="transit" translatable="false">Transit</string>
    <string name="maskapai" translatable="false">Maskapai</string>
    <string name="opsi_penerbangan" translatable="false">Opsi penerbangan</string>
    <string name="harga" translatable="false">Harga</string>
    <string name="termurah" translatable="false">Termurah</string>
    <string name="termahal" translatable="false">Termahal</string>
    <string name="simpan" translatable="false">Simpan</string>
    <string name="nama_depan" translatable="false">Nama Depan</string>
    <string name="nama_belakang" translatable="false">Nama Belakang</string>
    <string name="daftar_pemesanan" translatable="false">Daftar Pemesanan</string>
    <string name="hotel" translatable="false">Hotel</string>
    <string name="kota_hotel" translatable="false">Kota / Hotel</string>
    <string name="check_in" translatable="false">Check-in</string>
    <string name="check_out" translatable="false">Check-out</string>
    <string name="cari_hotel" translatable="false">Cari Hotel</string>
    <string name="tamu" translatable="false">Tamu</string>
    <string name="kamar" translatable="false">Kamar</string>
    <string name="pilih_kota_hotel" translatable="false">Pilih Kota / Hotel</string>
    <string name="daftar_hotel" translatable="false">Daftar Hotel</string>
    <string name="search" translatable="false">Cari</string>
    <string name="sortir" translatable="false">Sortir</string>
    <string name="popularitas" translatable="false">Popularitas</string>
    <string name="terpopuler" translatable="false">- terpopuler</string>
    <string name="harga_termurah" translatable="false">- termurah</string>
    <string name="harga_termahal" translatable="false">- termahal</string>
    <string name="rating_tertinggi" translatable="false">- tertinggi</string>
    <string name="rating" translatable="false">Rating</string>
    <string name="bintang" translatable="false">Bintang</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"
    </string>
    <string name="lihat_kamar" translatable="false">Lihat Kamar</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="pesan_sekarang" translatable="false">Pesan Sekarang</string>
    <string name="pesanan_anda" translatable="false">Pesanan Anda</string>
    <string name="hotel_bintang" translatable="false">Hotel Bintang</string>
    <string name="rating_terendah" translatable="false">terendah</string>
    <string name="fasilitas" translatable="false">Fasilitas</string>
    <string name="not_customer" translatable="false">Saya tidak menginap di hotel. saya membuat pemesanan ini untuk orang lain.</string>
    <string name="informasi_kontak_tamu" translatable="false">Informasi tamu</string>
    <string name="userid_klikbca" translatable="false">User ID KlikBCA</string>
    <string name="rincian_pembayaran" translatable="false">Rincian Pembayaran</string>
    <string name="my_booking" translatable="false">My Booking</string>
</resources>