<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.reka.tour.activity.CheckoutActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/metode_pembayaran">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_kartu_kredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/kartu_kredit"

                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_atm_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/atm_transfer"
                android:textSize="16sp"

                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_cimb_clicks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_vertical"
                android:padding="10dp"

                android:text="@string/cimb_clicks"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_klik_bca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/klik_bca"

                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_mandiri_clickpay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/mandiri_clickpay"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_epay_bri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/epay_bri"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_bca_klikpay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/bca_klikpay"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
