<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/toolbar_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kritik_saran"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/shape_bg"
        android:hint="@string/email_anda"
        android:padding="10dp"
        android:singleLine="true"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/kritik_saran_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_et"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/shape_bg"
        android:gravity="left"
        android:hint="@string/kritik_saran"
        android:maxLength="1000"
        android:minLines="5"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <TextView
        android:id="@+id/kritik_saran_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kritik_saran_et"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/kritik_saran_description" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/kritik_saran_description"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_selector"
        android:text="@string/send"
        android:textColor="@android:color/white" />

</RelativeLayout>