<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_penumpang"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:background="?android:selectableItemBackground"
    android:padding="@dimen/activity_horizontal_margin"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_passanger"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:singleLine="true"
            android:text="Penumpang Dewasa 1"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkboxDuplicate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Sama seperti kontak diatas"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/ev_titel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_dropdown"
                android:hint="@string/pilih_titel"
                android:inputType="text"
                android:singleLine="true"
                android:tag="@string/titel" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <EditText
                android:id="@+id/ev_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_depan"
                android:inputType="text"
                android:singleLine="true"
                android:tag="@string/titel" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <EditText
                android:id="@+id/ev_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_belakang"
                android:inputType="text"
                android:singleLine="true"
                android:tag="@string/titel" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <EditText
                android:id="@+id/ev_tanggal_lahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanggal_lahir"
                android:inputType="text"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>